namespace DapperDemo.DataAccess;

public class DataBase
{
    public TableRoles Roles { get; set; }
    public TableAccounts Accounts { get; set; }
    public TableUsers Users { get; set; }
}